added tittle in  blogs & category url

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Smash Code blog is about freelancing, programming languages, modern technologies, AI, digital marketing, and trending topics. We aim to help you live a successful and fulfilling life." />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -19,7 +20,6 @@
     <title>Smash Code</title>
     <!-- <script async src="https://api.countapi.xyz/hit/smash-code.com/visits?callback=callbackName"></script> -->
     <!-- <meta name="title" content="Learn Freelancing" /> -->
-    <!-- <meta name="description" content="Smash-Code is one of the best software development company. Based on Pakistan. " /> -->
     <!-- <meta name="keywords" content="HTML, CSS, JavaScript"> -->
     <!-- <meta name="author" content="Ismail Muhammad" /> -->
     <!-- <meta name="image" content="https://firebasestorage.googleapis.com/v0/b/blogs-smash-code.appspot.com/o/uploads%2Fmedia%2FmainLogo.png-Mowiyb46OT8mTRi0rL2?alt=media&token=0557ccc8-f66e-47ed-80f7-8b64a270fbfa" /> -->
@@ -47,12 +47,6 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- <script>
-        function callbackName(response) {
-            // document.getElementById('visits').innerText = response.value;
-            console.log(response.value)
-        }
-    </script> -->
 </body>
 
 </html>
